--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -13,3 +13,7 @@ repos:
     -   id: black
         args: [--line-length=88]
         language_version: python3.12.11
+-   repo: https://github.com/PyCQA/flake8
+    rev: 7.1.0 # Or the latest stable version
+    hooks:
+    -   id: flake8
